--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,9 @@
             <p>This example is a quick exercise to illustrate how the navbar and its contents work. Some navbars extend the width of the viewport, others are confined within a <code>.container</code>. For positioning of navbars, checkout the <a href="/docs/4.5/examples/navbar-static/">top</a> and <a href="/docs/4.5/examples/navbar-fixed/">fixed top</a> examples.</p>
             <p>At the smallest breakpoint, the collapse plugin is used to hide the links and show a menu button to toggle the collapsed content.</p>
             <p>
-                <a class="btn btn-primary" href="/docs/4.5/components/navbar/" role="button">View navbar docs &raquo;</a>
+                <a class="btn btn-success btn-large" href="" role="button">Accept Label</a>
+                <a class="btn btn-danger btn-large" href="" role="button">Decline Label</a>
+                <a class="btn btn-warning btn-large" href="" role="button">Skip Document</a>
             </p>
         </div>
     </div>
