--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,9 +11,11 @@
 <main role="main">
     <div class="jumbotron">
         <div class="col-sm-8 mx-auto">
-            <h1>Annotate Documents</h1>
-            <p>This example is a quick exercise to illustrate how the navbar and its contents work. Some navbars extend the width of the viewport, others are confined within a <code>.container</code>. For positioning of navbars, checkout the <a href="/docs/4.5/examples/navbar-static/">top</a> and <a href="/docs/4.5/examples/navbar-fixed/">fixed top</a> examples.</p>
-            <p>At the smallest breakpoint, the collapse plugin is used to hide the links and show a menu button to toggle the collapsed content.</p>
+            <h1>Annotate Document</h1>
+            <div class="form-group">
+                <!-- <label for="exampleFormControlTextarea1">Example textarea</label> -->
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="30"></textarea>
+            </div>
             <p>
                 <a class="btn btn-success btn-large" href="" role="button">Accept Label</a>
                 <a class="btn btn-danger btn-large" href="" role="button">Decline Label</a>
