cleanup index.html text area

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,10 +12,9 @@
     <div class="jumbotron">
         <div class="col-sm-8 mx-auto">
             <h1>Annotate Document</h1>
-            <div class="form-group">
-                <!-- <label for="exampleFormControlTextarea1">Example textarea</label> -->
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="30"></textarea>
-            </div>
+
+            <textarea class="form-control" id="exampleFormControlTextarea1" value="placeholder for document ..." rows="30"></textarea>
+            <br>
             <p>
                 <a class="btn btn-success btn-large" href="" role="button">Accept Label</a>
                 <a class="btn btn-danger btn-large" href="" role="button">Decline Label</a>
