Change predicted in label page to proper label

--- a/app/templates/label.html
+++ b/app/templates/label.html
@@ -13,7 +13,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-9 mx-auto">
-                    <h3>Predicted: {{data_counter}}</h3>
+                    <h3>Predicted: {{label}}</h3>
                     <textarea class="form-control" id="displayDocText" value="" rows="15">{{data}}</textarea>
 
                     <br>
