--- a/app/templates/label.html
+++ b/app/templates/label.html
@@ -33,15 +33,17 @@
                 </div>
                 <div class="col-sm mx-auto">
                     <p style="margin-top: 2.65em">
-                        <a class="btn btn-success btn-large" style="width: 130px" href="" role="button">Accept Predicted Label</a>
-                        <div class="btn-group-vertical" style="margin-top: 2.65em">
-                            {% for _, label_name in labels.items() %}
-                                <button type="button" class="btn btn-primary button-large" style="width: 130px">{{label_name}}</button>
-                            {% endfor %}
-                        </div>
-                        <a class="btn btn-danger btn-large" style="width: 130px" href=""
-                           role="button">Accept User Label
-                        </a>
+                        <form method="post">
+                          <input name="accept_predicted" class="btn btn-success btn-large" style="width: 200px" href="" role="button" type="submit" value="Accept Predicted Label"></input>
+                          <div class="btn-group-vertical" style="margin-top: 2.65em">
+                              {% for _, label_name in labels.items() %}
+                                  <button name="{{label_name}}" role="button" class="btn btn-primary btn-large" style="width: 200px" value="{{label_name}}">{{label_name}}</button>
+                              {% endfor %}
+                          </div>
+                          <input name="accept_user" class="btn btn-danger btn-large" style="width: 200px" href=""
+                             role="button" type="submit" value="Accept User Label">
+                          </input>
+                        </form>
                     </p>
                 </div>
             </div>
